--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ if(NOT "${CMAKE_BUILD_TYPE}" STREQUAL "Release")
 endif()
 
 add_definitions(${src_compiler_definitions})
-file(GLOB_RECURSE app_src "*.h" "*.hpp" "*.cpp")
-add_library(${PROJECT_NAME} ${app_src})
+file(GLOB_RECURSE app_src "include/*.hpp" "src/*.cpp")
+add_library(${PROJECT_NAME} SHARED ${app_src})
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 14 CXX_EXTENSIONS OFF)
 target_include_directories(${PROJECT_NAME} PUBLIC "include")
