--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(crucian CXX)
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
+option(CRU_SHARED "Build shared or static library" ON)
+option(CRU_PIC "Enable position independent code" OFF)
+
 string(TOUPPER ${CMAKE_SYSTEM_NAME} PLATFORM_UPPERCASE)
 set(BITNESS 32)
 if (CMAKE_SIZEOF_VOID_P EQUAL 8)
@@ -20,9 +23,16 @@ if (NOT "${CMAKE_BUILD_TYPE}" STREQUAL "Release")
 endif ()
 
 add_definitions(${src_compiler_definitions})
-file(GLOB_RECURSE app_src "include/*.hpp" "src/*.cpp")
+file(GLOB_RECURSE cur_src "include/*.hpp" "src/*.cpp")
 
-add_library(${PROJECT_NAME} SHARED ${app_src})
+if (CRU_SHARED)
+    add_library(${PROJECT_NAME} SHARED ${cur_src})
+else()
+    add_library(${PROJECT_NAME} STATIC ${cur_src})
+endif()
+
+
+set(CMAKE_POSITION_INDEPENDENT_CODE CRU_PIC)
 target_include_directories(${PROJECT_NAME} PUBLIC "include")
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
